Git Tests/force-app/main/default/default/objects/Fornecedor__c/Fornecedor__c.object-meta.xml
<CustomObject>
    <label>Fornecedor</label>
    <nameField>
        <label>Nome do fornecedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fornecedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>