Git Tests/force-app/main/default/default/objects/Fornecedor__c/fields/Loja__c.field-meta.xml
<CustomField>
    <fullName>Loja__c</fullName>
    <label>Loja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>