Git Tests/force-app/main/default/default/objects/Fornecedor__c/fields/NomeAbreviado__c.field-meta.xml
<CustomField>
    <fullName>NomeAbreviado__c</fullName>
    <label>Nome abreviado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>