Git Tests/force-app/main/default/default/objects/Fornecedor__c/fields/NomeContato__c.field-meta.xml
<CustomField>
    <fullName>NomeContato__c</fullName>
    <label>Nome do contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>