Git Tests/force-app/main/default/default/objects/Fornecedor__c/fields/Telefone1__c.field-meta.xml
<CustomField>
    <fullName>Telefone1__c</fullName>
    <label>Telefone 1</label>
    <type>Phone</type>
</CustomField>