Git Tests/force-app/main/default/default/objects/Fornecedor__c/fields/Telefone2__c.field-meta.xml
<CustomField>
    <fullName>Telefone2__c</fullName>
    <label>Telefone 2</label>
    <type>Phone</type>
</CustomField>