Git Tests/force-app/main/default/default/objects/Fornecedor__c/fields/UnidadeFederativa__c.field-meta.xml
<CustomField>
    <fullName>UnidadeFederativa__c</fullName>
    <label>Unidade federativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnidadeFederativa</valueSetName>
    </valueSet>
</CustomField>