Git Tests/force-app/main/default/default/objects/Fornecedor__c/validationRules/Fornecedor_BloquearEdicaoNome.validationRule-meta.xml
<ValidationRule>
    <fullName>Fornecedor_BloquearEdicaoNome</fullName>
    <active>true</active>
    <description>Bloquear a edição do campo &quot;Nome do Fornecedor&quot;</description>
    <errorConditionFormula>AND(
$Profile.Name != &apos;Administrador do sistema&apos;,
ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>O campo &quot;Nome do fornecedor&quot; não pode ser editado.</errorMessage>
</ValidationRule>